# celery-tasks-pytest-poetry

./: .gitignore  Makefile  README.md  pyproject.toml
src/celery_tasks/: __init__.py  celery_app.py  tasks.py
tests/: test_tasks.py
